--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-   <string name="app_name">FamilyWell</string>
+   <string name="app_name">Lifebox Smart</string>
    <string name="btnConfirmTitle">SE CONNECTER</string>
    <string name="config_instruction">Cinq minutes après la mise sous tension du routeur, appuyez longuement pour accéder au MODE RÉSEAU</string>
    <string name="how_to_config">Veuillez vérifier que le voyant bleu du routeur clignote, puis passez à l’étape suivante.</string>
@@ -89,10 +89,10 @@
    <string name="one_condition">. Alerte avec une seule condition : </string>
    <string name="all_condition">. Alerte avec plusieurs conditions : </string>
    <string name="choose_condition">Choisir une condition</string>
-   <string name="one_condition_hint">Si vous configurez une ou  plusieurs conditions de démarrage, une d’entre elles sera réalisée..</string>
-   <string name="all_condition_hint_one">Si vous configurez plusieurs conditions,  elles devront toutes être conformes pour permettre le démarrage;</string>
-   <string name="all_condition_hint_two">Si vous ne configurez qu’une condition de démarrage, celle-ci sera effective;</string>
-   <string name="all_condition_hint_three">Vous pouvez choisir la configuration par défaut, ou bien joindre notre service clients pour plus d’explication.</string>
+   <string name="one_condition_hint">Si vous paramétrez plusieurs objets dans les conditions, en cochant cette case, il suffira d’un seul objet stimulé pour déclencher l’alerte\nExemple : Porte/fenêtre + Détecteur de mouvement et Passerelle. Il suffit qu’un des deux soit mis en alerte pour que la passerelle sonne</string>
+   <string name="all_condition_hint_one">Si vous paramétrez plusieurs objets dans les conditions, il faudra que tous les objets soient en alerte pour que la passerelle soit déclenchée\nExemple : Porte/fenêtre + Détecteur de mouvement doivent simultanément ou successivement être stimulés pour que la passerelle sonne</string>
+   <string name="all_condition_hint_two"> </string>
+   <string name="all_condition_hint_three"> </string>
    <string name="my_scene">Mon scenario</string>
    <string name="name_is_null">Merci de renseigner un nom</string>
    <string name="name_is_repeat">Le nom est déjà utilisé</string>
@@ -200,7 +200,7 @@
    <string name="lamp">Lampe</string>
    <string name="thcheck">Détecteur de  chaleur</string>
    <string name="guardor">Surveillance de l’entrée</string>
-   <string name="valve">Contrôleur</string>
+   <string name="valve">Valve d’arrivée d’eau</string>
    <string name="button">Bouton</string>
    <string name="curtain">Rideau</string>
    <string name="cxsmalarm">Détecteur de fumée</string>
@@ -396,8 +396,8 @@
    <string name="success_add">L’équipement a bien été ajouté</string>
    <string name="temp_or_hum">Déclencheur de température / d’humidité</string>
    <string name="trigger_style">Mode de déclenchement</string>
-   <string name="server_intro">1, la confirmation et l’acceptation des conditions de service\nLa propriété des services de contenu et le site Web App et à la société.L’utilisateur dans le service avant d’accepter, assurez - vous de lire attentivement cette clause.Service de l’utilisateur, ou par l’intermédiaire de l’achèvement de la procédure d’enregistrement, représentant l’utilisateur accepte toutes les conditions de service.\n2, les utilisateurs sont d’accord:\n(1) fournir des renseignements personnels détaillés et exacts en temps opportun.\n(2) mettre continuellement à jour les renseignements d’enregistrement et de satisfaire aux exigences de temps, détaillées et exactes.\nsi les informations fournies par l’utilisateur est inexact, ce site web a le droit de mettre fin au service.\nce site web et l’app de ne pas divulguer le nom de l’utilisateur, l’adresse, l’adresse électronique, le numéro de compte et le numéro de téléphone et d’autres renseignements (voir protection de la vie privée la clause).\nles utilisateurs de ce site et tout comportement de ppa doivent respecter:\n(1) la transmission de données doivent se conformer aux règlements de l’ue.\n(2) l’utilisation de services d’information n’est pas actes illégaux et immoraux.\n(3) ne pas gêner ou de confusion de services de réseau.\n(4) respecter tous les protocoles réseau, règles, procédures et pratiques pour l’utilisation des services.le code de conduite de l’utilisateur d’internet est fondée sur des règlements, politiques, procédures et pratiques.\n3, modifier les modalités de service\ce site web et app ont le droit de modifier les termes si nécessaire, sera publiée sur la page.\nsi vous n’acceptez pas les changements, l’utilisateur peut prendre l’initiative d’annuler leur adhésion.si vous n’annulez pas votre adhésion, il est réputé être un changement dans les conditions de service.\n4, numéro de compte de l’utilisateur, mot de passe et la sécurité\nune fois qu’il a été enregistré comme membre, vous aurez un mot de passe et un nom d’utilisateur.</string>
-   <string name="about_app">Le système intelligent FamilyWell vous permet de surveiller votre maison. Que ce soit en présence ou à distance, sa passerelle vous permet de connecter et suivre jusqu’à 32 équipements. Votre maison est en sécurité grace à ses capteurs intelligents (détecteur de fumée, de porte et fenêtre, de chaleur...) et sa caméra. Vous personnalisez le niveau de contrôle en créant des scenarii et moyens d’alerte.Vous pouvez être rassuré, vous serez immédiatement informé, sur votre smartphone, de toute activité anormale.</string>
+   <string name="server_intro">Merci d’avoir choisi le système intelligent LIFEBOX SMART.\nEn utilisant cette application, en enregistrant votre compte (identifiant et mot de passe), vous acceptez les conditions d’utilisation de ce service. Elles sont en conformité avec la règlementation Européenne.\nPour un bon fonctionnement, cette application aura besoin de renseignements personnels. Ces informations resteront confidentielles.\nL’utilisateur s’engage à une utilisation respectueuse de l’application et des systèmes réseau. En cas de manquement à cette obligation, le compte utilisateur pourra être supprimé.</string>
+   <string name="about_app">Le système intelligent Lifebox Smart vous permet de surveiller votre maison. Que ce soit en présence ou à distance, sa passerelle vous permet de connecter et suivre jusqu’à 32 équipements. Votre maison est en sécurité grace à ses capteurs intelligents (détecteur de fumée, de porte et fenêtre, de chaleur...) et sa caméra. Vous personnalisez le niveau de contrôle en créant des scenarii et moyens d’alerte. Vous pouvez être rassuré, vous serez immédiatement informé, sur votre smartphone, de toute activité anormale.</string>
    <string name="modebutton_ins">Raccourci vers le scénario</string>
    <string name="input_exist">Le périphérique est déjà utilisé. Merci d’en choisir un autre.</string>
    <string name="output_exist">Le périphérique est déjà utilisé. Merci d’en choisir un autre.</string>
@@ -499,7 +499,7 @@
    <string name="open">Ouvrir</string>
    <string name="close">Fermer</string>
    <string name="param_setting">Paramètres</string>
-   <string name="data_syncing">Est disposé..</string>
+   <string name="data_syncing">Est disposé, dans une synchronisation de données..</string>
    <string name="success_send_email">Le code de vérification a été envoyé sur votre adresse mail. </string>
    <string name="dev_type_idr">La sonnette de la caméra</string>
    <string name="gprs_hint">Voulez vous ouvrir la video ?</string>
@@ -549,5 +549,4 @@
    <string name="file_is_exist">Fichier existant</string>
    <string name="look">Regarder</string>
    <string name="success_download">Téléchargement réussi</string>
-   <string name="network_hz">Le dispositif ne prend en charge que les Wi-fi de 2,4 GHz.</string>
 </resources>
