--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-   <string name="app_name">FamilyWell</string>
+   <string name="app_name">Lifebox Smart</string>
    <string name="btnConfirmTitle">连接</string>
    <string name="config_instruction">网关上电五秒后，长按网关按钮三秒以上</string>
    <string name="how_to_config">请确认网关蓝灯闪烁，\n然后点击下一步。</string>
@@ -397,7 +397,7 @@
    <string name="temp_or_hum">选择温度还是湿度触发</string>
    <string name="trigger_style">触发方式</string>
    <string name="server_intro">1、服务条款的确认和接纳\n本网站及APP的各项内容和服务的所有权归本公司拥有。用户在接受本服务之前，请务必仔细阅读本条款。用户使用服务，或通过完成注册程序，表示用户接受所有服务条款。\n\n2、用户同意：\n(1) 提供及时、详尽及准确的个人资料。\n(2) 不断更新注册资料、符合及时、详尽、准确的要求。\n如果用户提供的资料不准确，本网站有结束服务的权利。\n本网站及APP将不公开用户的姓名、地址、电子邮箱、帐号和电话号码等信息（请阅隐私保护条款）。\n用户在本网站和APP的任何行为必须遵循：\n(1) 传输资料时必须符合有关欧盟法规。\n(2) 使用信息服务不作非法用途和不道德行为。\n(3) 不干扰或混乱网络服务。\n(4) 遵守所有使用服务的网络协议、规定、程序和惯例。用户的行为准则是以因特网法规，政策、程序和惯例为根据的。\n\n3、服务条款的修改\n本网站及APP有权在必要时修改条款，将会在页面公布。\n如果不接受所改动的内容，用户可以主动取消自己的会员资格。如果您不取消自己的会员资格，则视为接受服务条款的变动。\n\n4、 用户的帐号、密码和安全性\n一旦成功注册成为会员，您将有一个密码和用户名。</string>
-   <string name="about_app">FamilyWell智能安防系统主要由一个智能网关与各种智能设备组成，以云服务器、移动互联网、RF通信技术为数据链路的载体，实现远程智能终端对居家环境的远程监测与控制，系统支持多种情景模式和灵活的自定义情景执行规则，自动执行各种安防事故应急处理。智能设备目前已经有烟雾报警器、燃气报警器、一氧化碳报警器、水感报警器、门磁探测器、人体移动探测器、紧急呼叫按钮、智能插座和温湿度探测器等。近期，还会不断增加的智能设备有网络摄像机、智能锁、开关面板、插座面板、智能空气净化和电磁水阀等，敬请期待！</string>
+   <string name="about_app">Lifebox Smart智能安防系统主要由一个智能网关与各种智能设备组成，以云服务器、移动互联网、RF通信技术为数据链路的载体，实现远程智能终端对居家环境的远程监测与控制，系统支持多种情景模式和灵活的自定义情景执行规则，自动执行各种安防事故应急处理。智能设备目前已经有烟雾报警器、燃气报警器、一氧化碳报警器、水感报警器、门磁探测器、人体移动探测器、紧急呼叫按钮、智能插座和温湿度探测器等。近期，还会不断增加的智能设备有网络摄像机、智能锁、开关面板、插座面板、智能空气净化和电磁水阀等，敬请期待！</string>
    <string name="modebutton_ins">情景快捷按钮</string>
    <string name="input_exist">输入设备不能重复</string>
    <string name="output_exist">相邻输出设备不能重复</string>
@@ -499,7 +499,7 @@
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="param_setting">参数设置</string>
-   <string name="data_syncing">设置完成</string>
+   <string name="data_syncing">设置完成,数据同步中..</string>
    <string name="success_send_email">验证码已发送至邮箱，请打开邮箱查看。</string>
    <string name="dev_type_idr">门铃摄像头</string>
    <string name="gprs_hint">当前处于流量模式，是否开启视频?</string>
@@ -549,5 +549,4 @@
    <string name="file_is_exist">文件已存在</string>
    <string name="look">查看</string>
    <string name="success_download">下载成功</string>
-   <string name="network_hz">该设备只支持2.4GHz频率的Wi-Fi</string>
 </resources>
