--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -550,4 +550,7 @@
    <string name="work_mode">El modo de trabajo</string>
    <string name="wt">comprobador de agua</string>
    <string name="year">año</string>
+   <string name="china_point">China</string>
+   <string name="europea_point">Europa</string>
+   <string name="choose_server">Selección de área</string>
 </resources>
