--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -550,4 +550,7 @@
    <string name="work_mode">Arbeitsmodus</string>
    <string name="wt">Wassermelder</string>
    <string name="year">Jahr</string>
+   <string name="china_point">China</string>
+   <string name="europea_point">Europa</string>
+   <string name="choose_server">Region auswählen</string>
 </resources>
