--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -550,4 +550,7 @@
    <string name="work_mode">作業モード</string>
    <string name="wt">水浸センサー</string>
    <string name="year">年</string>
+   <string name="china_point">中国</string>
+   <string name="europea_point">ヨーロッパ</string>
+   <string name="choose_server">選択領域</string>
 </resources>
