--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -550,4 +550,7 @@
    <string name="work_mode">Arbeidsmodus</string>
    <string name="wt">VannKontroll</string>
    <string name="year">år</string>
+   <string name="china_point">Kina</string>
+   <string name="europea_point">Europa</string>
+   <string name="choose_server">Velg område</string>
 </resources>
