--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -550,4 +550,7 @@
    <string name="work_mode">Arbetsläge</string>
    <string name="wt">Vattenläckagevarnare</string>
    <string name="year">år</string>
+   <string name="china_point">Kina</string>
+   <string name="europea_point">Europa</string>
+   <string name="choose_server">Välj område</string>
 </resources>
