[release] 2.677 1.服务器节点选择优化，2.配网优化

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -553,4 +553,5 @@
    <string name="china_point">Čínská</string>
    <string name="europea_point">Evropa</string>
    <string name="choose_server">Vybrat region</string>
+   <string name="restart_gateway">Prosím, restartujte bránu a přerozdělte síť.</string>
 </resources>
