--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -553,4 +553,5 @@
    <string name="china_point">中国</string>
    <string name="europea_point">欧洲</string>
    <string name="choose_server">选择地区</string>
+   <string name="restart_gateway">请重启网关后重新配网</string>
 </resources>
