--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -553,4 +553,5 @@
    <string name="china_point">Kinesisk</string>
    <string name="europea_point">Europa</string>
    <string name="choose_server">Vælg region</string>
+   <string name="restart_gateway">Start venligst gateway og omfordel netværket</string>
 </resources>
