--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -553,4 +553,5 @@
    <string name="china_point">China</string>
    <string name="europea_point">Europa</string>
    <string name="choose_server">Region auswählen</string>
+   <string name="restart_gateway">Bitte starten Sie das Gateway neu und verteilen Sie das Netzwerk</string>
 </resources>
