--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -553,4 +553,5 @@
    <string name="china_point">Kiina</string>
    <string name="europea_point">Eurooppa</string>
    <string name="choose_server">Valitse alue</string>
+   <string name="restart_gateway">Käynnistä portti uudelleen ja jaa verkko uudelleen</string>
 </resources>
