--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -553,4 +553,5 @@
    <string name="china_point">Chine</string>
    <string name="europea_point">Europe</string>
    <string name="choose_server">Zone de sélection</string>
+   <string name="restart_gateway">Redémarrez le portail et reconfigurez le réseau.</string>
 </resources>
