--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -553,4 +553,5 @@
    <string name="china_point">Cina</string>
    <string name="europea_point">Europa</string>
    <string name="choose_server">Seleziona regione</string>
+   <string name="restart_gateway">Si prega di riavviare il gateway e ridistribuire la rete</string>
 </resources>
