--- a/app/src/main/res/values-nb/strings.xml
+++ b/app/src/main/res/values-nb/strings.xml
@@ -553,4 +553,5 @@
    <string name="china_point">Kina</string>
    <string name="europea_point">Europa</string>
    <string name="choose_server">Velg område</string>
+   <string name="restart_gateway">Vennligst starte porten igjen og redistriburer nettverket</string>
 </resources>
