--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -553,4 +553,5 @@
    <string name="china_point">China</string>
    <string name="europea_point">Europa</string>
    <string name="choose_server">Selecteer de regio</string>
+   <string name="restart_gateway">Start de poort opnieuw en herdistribueer het netwerk.</string>
 </resources>
