--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -553,4 +553,5 @@
    <string name="china_point">Kitajska</string>
    <string name="europea_point">Evropa</string>
    <string name="choose_server">Izberite območje</string>
+   <string name="restart_gateway">Prosim, ponovno zaženite prehod in prerazporedite mrežo</string>
 </resources>
