--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -553,4 +553,5 @@
    <string name="china_point">Kina</string>
    <string name="europea_point">Europa</string>
    <string name="choose_server">Välj område</string>
+   <string name="restart_gateway">Starta om porten och omfördela nätverket</string>
 </resources>
