--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -549,4 +549,5 @@
    <string name="file_is_exist">File already exist</string>
    <string name="look">See</string>
    <string name="success_download">Download Successful</string>
+   <string name="restart_gateway">Please restart the gateway and re-config the WiFi network</string>
 </resources>
