[what]法语语言包更新

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -67,7 +67,7 @@
    <string name="scene">Scenario</string>
    <string name="equipment">Équipement</string>
    <string name="equipment_warn">Historique des alertes</string>
-   <string name="update_alert">Update</string>
+   <string name="update_alert">Mise à jour</string>
    <string name="exit_hint">Vous quittez l’application %1$s</string>
    <string name="my_home">Ma maison</string>
    <string name="system_scene">Scenario</string>
@@ -404,7 +404,7 @@
    <string name="click_exist">Merci de cliquer sur "ajouter"</string>
    <string name="delay_exist">Cette opération va annuler le délai déjà paramétré. </string>
    <string name="phone_exist">Vous avez créé des notifications téléphoniques</string>
-   <string name="eq_repeat">Lorsque vous modifier le routeur, le délai paramétré est automatiquement supprimé.</string>
+   <string name="eq_repeat">Lorsque vous modifiez le routeur, le délai paramétré est automatiquement supprimé.</string>
    <string name="delete_delay">Supprimer ce retardement</string>
    <string name="delete_last_delay">La suppression de cet équipement entrainera la suppression du programme précédent</string>
    <string name="unamed">Merci de définir le nom</string>
@@ -432,8 +432,8 @@
    <string name="is_head_yuyin"> </string>
    <string name="if_ok_click_next"> </string>
    <string name="some_device_kuaishan"> </string>
-   <string name="no_support_fiveg_wifi">Pour ajouter une camera :</string>
-   <string name="see_some_scene_above_click">Lorsque la caméra est en cours de configuration, cliquer sur « suivant »\nLe wifi ne peut supporter le 5 Ghz</string>
+   <string name="no_support_fiveg_wifi">(Ne supporte pas le réseau WIFI 5GHz)</string>
+   <string name="see_some_scene_above_click">Lorsque la caméra est en cours de configuration, cliquer sur « suivant »</string>
    <string name="ipc_tip_1">1.Brancher l’alimentation afin de vous assurer que le système fonctionne normalement;</string>
    <string name="ipc_tip_2">2.S’il s’agit de la première configuration, merci de placer votre smartphone à un mètre de la passerelle, pour une meilleure réception du signal；</string>
    <string name="ipc_tip_3">3.Lorsque vous aurez entendu « Configuration rapide » ou bien « En attente de connexion », vous pourrez alors commencer la configuration；</string>
@@ -507,28 +507,28 @@
    <string name="valve_check">La soupape de détection</string>
    <string name="copy_scene_alert">Souhaitez vous copier un scenario déjà existant ?</string>
    <string name="pir_default_scene">Alerte détecteur de mouvement</string>
-    <string name="door_default_scene">Alerte ouverture Porte / Fenêtre</string>
-    <string name="old_man_default_scene">Alerte 5 heures sans mouvement</string>
-    <string name="default_scene_cannot_be_deleted">La situation ne peut être supprimé par défaut</string>
-    <string name="pir_default_scene_hint">Alerte mouvement, scène paramétrée par défaut. Cf guide utilisateur</string>
-    <string name="door_default_scene_hint">Alerte Porte/Fenêtre, scène paramétrée par défaut. Cf guide utilisateur</string>
-    <string name="old_man_default_scene_hint">Alerte activité, scène paramétrée par défaut. Cf guide utilisateur</string>
-<string name="alert_elder_care">5 heures sans activité</string>
+   <string name="door_default_scene">Alerte ouverture Porte / Fenêtre</string>
+   <string name="old_man_default_scene">Alerte 5 heures sans mouvement</string>
+   <string name="default_scene_cannot_be_deleted">La situation ne peut être supprimé par défaut</string>
+   <string name="pir_default_scene_hint">Alerte mouvement, scène paramétrée par défaut. Cf guide utilisateur</string>
+   <string name="door_default_scene_hint">Alerte Porte/Fenêtre, scène paramétrée par défaut. Cf guide utilisateur</string>
+   <string name="old_man_default_scene_hint">Alerte activité, scène paramétrée par défaut. Cf guide utilisateur</string>
+   <string name="alert_elder_care">5 heures sans activité</string>
    <string name="gs361_install_construction">S’il vous plaît, thermostat monté à la soupape, puis, une fois encore, appuyez sur le bouton Terminer l’installation.</string>
    <string name="default_scene">Situation par défaut</string>
    <string name="config_fail_reason">Les raisons de l’échec de distribution</string>
    <string name="log">Enregistrement</string>
-   <string name="is_upgrading">On est en train de monter..</string>
+   <string name="is_upgrading">Chargement en cours</string>
    <string name="success_upgrade">Mise à jour</string>
    <string name="fail_upgrade">échec</string>
-   <string name="outdoor_siren">Flûte de police</string>
+   <string name="outdoor_siren">Sirène extérieure</string>
    <string name="auto_modify">Volume</string>
-   <string name="please_choose_alert_time">Please choose alert time</string>
+   <string name="please_choose_alert_time">Merci de choisir l’heure d’alerte</string>
    <string name="app_update_hint">Trouver une nouvelle version:%1$s</string>
-   <string name="repeat_at_this_time">Time is Repeated at %1$s</string>
-   <string name="instruction_input">Conditions:Un dispositif d’entit é de fonction de collecte et de r é glage de synchronisation d’ex é cation consiste à cliquer </string>
-   <string name="instruction_output">Merci de suivre I’ordre des actions:Dispositif de sort de fonditon, conform é ment à l’ordre d’ex é cation de I’icône</string>
-   <string name="instruction_scene_name">Saisissez le nom de la scéne</string>
+   <string name="repeat_at_this_time">La répétition se fait à</string>
+   <string name="instruction_input">Conditions d’exécution : Appareil avec fonction d’acquisition comprenant l’exécution des clics et le réglage du timing</string>
+   <string name="instruction_output">Merci de suivre I’ordre des actions: Dispositif avec fonction de sortie, cliquez sur configurer l’action d’exécution</string>
+   <string name="instruction_scene_name">Saisissez le nom de la scène</string>
    <string name="wireless_config">Paramètres WiFi</string>
    <string name="data_switch">Transpondeur de signaux</string>
    <string name="data_switch_sm_warn">Alarme incendie</string>
@@ -545,7 +545,7 @@
    <string name="permission_reject_write_local_tip">Si vous n ’avez pas de droits de lecture et d’ écriture sur la carte SD, cela affectera l ’utilisation des fonctions associées à la caméra APP, ouvrez les droits de mémoire</string>
    <string name="permission_reject_location_service_tip">Veuillez ouvrir le Service de localisation, sinon vous ne pourrez pas configurer WiFi</string>
    <string name="permission_register">Demande d ’autorisation</string>
-   <string name="goto_set">Deformer</string>
+   <string name="goto_set">Réglages</string>
    <string name="file_is_exist">Fichier existant</string>
    <string name="look">Regarder</string>
    <string name="success_download">Téléchargement réussi</string>
